			  - Moved JS code from view.inc.php to adjs.php file  (Niels)
			  - Removed clients from stats-index.php for client interface, now only
			    shows a list of campaigns  (Niels)
			  - Added title-tag for <img> in view.inc.php for support of HTML4/XHTML1
			    gives on mouse over popup text in >IE5 and Mozilla 0.9/Netscape 6 (Stefan) 20011003

			+ Misc bugfixes
			  - Fixed quote problem with banner-text, alt and description fields  (Niels)
			  - Fixed HTML layout problem with large description and/or alt-text  (Niels)
			  - Fixed error in client edit when client permissions were left empty (Thanks to Scott Delap)
			  - Fixed bug: if changing from MySQL stored banner to an empty HTML banner, 
			    raw image data would be present in HTML banner field.
			  - Fixed bug: unlimited clicks/views checkbox in campaign-edit were
			    deselected when jumping to clicks/views fields using TAB key (Matteo)
			  - Fixed missing </table> tag in stats-convert.php  (Helmut Wirth)
			  - Fixed date format in lib-reports.inc.php  (Helmut Wirth)
			  - Fixed background color in stats-convert.php  (Helmut Wirth)
			  - Error message when temp table can't be created  (Helmut Wirth)
			  - Fixed error message on client stats when no banners are available  (Niels)
			  - Removed PHP_SELF variables, which caused problems with CGI PHP  (Niels)		
  
			+ Security fixes
			  - Fixed login exploit where users could login without authentification  (Niels)
			  - Fixed upload exploit where users could download files from the server  (Niels)
			  - Fixed exploit where users could excute arbitrary code on the server  (Niels)



v 2.0beta5		+ Added override setting for automatic GD detection  (Niels)
			+ Added support for passing ISMAP click location  (Niels)
			+ Added banner invocation code generator  (Niels)
			+ Clients can now deactivate their own banners if permitted  (Niels thanks to Shannon Johnston)